Wed May 30 05:01:33 GMT 2012  Olly Betts <olly@survex.com>

	* weight/tradweight.cc: BM25Weight -> TradWeight in exception message.

Wed May 30 04:28:43 GMT 2012  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Fix feature test added for STEM_ALL_Z.

Tue May 29 07:29:01 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/testutils.cc,tests/harness/testutils.h: Remove unused
	  test helper mset_range_is_same_percents() (thanks, lcov!)

Tue May 29 04:10:07 GMT 2012  Olly Betts <olly@survex.com>

	* tests/generate-api_generated: Test that the string returned by a
	  get_description() method isn't empty.

Tue May 29 03:54:15 GMT 2012  Olly Betts <olly@survex.com>

	* generate-exceptions: Use function attributes in generated error.h.

Tue May 29 02:10:23 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac,tests/runsrv.in: In the testsuite, only run remote
	  servers under valgrind if x87 FP instructions are in use.

Tue May 29 00:24:42 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/: Use the new function attributes on various API
	  methods.
	* tests/api_wrdb.cc: get_termfreq() is now marked as pure, so the
	  testsuite needs to actually use the return value to check its
	  exception behaviour.

Mon May 28 22:31:21 GMT 2012  Olly Betts <olly@survex.com>

	* api/query.cc,api/queryinternal.cc,api/queryinternal.h,
	  include/xapian/query.h: Pass vector<pair<Xapian::termpos>, string> >&
	  argument to Query::Internal::gather_terms() as a void* to avoid
	  having to include <vector> in query.h.

Mon May 28 05:07:02 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/attributes.h: Remove unused XAPIAN_NOTHROW_API_METHOD
	  as we're handling that a different way instead.

Mon May 28 00:41:55 GMT 2012  Olly Betts <olly@survex.com>

	* docs/doxygen_api.conf.in,docs/doxygen_source.conf.in: Hide new
	  function attribute macros from doxygen.

Sun May 27 14:04:34 GMT 2012  Olly Betts <olly@survex.com>
