@@ -145,6 +145,7 @@ collated_apitest_sources = \
  api_valuestats.cc \
  api_valuestream.cc \
  api_geospatial.cc \
+ api_weight.cc \
  api_wrdb.cc
 
 apitest_SOURCES = apitest.cc dbcheck.cc $(collated_apitest_sources) \
